GNOME Bugzilla – Bug 741001
GST_DEBUG categories are missing when using --gst-debug-help
Last modified: 2016-05-13 08:29:53 UTC
GST_DEBUG defined in class_init is not listed when using --gst-debug-help. Only categories defined as part of G_DEFINE_TYPE_WITH_CODE are seen in the list.
I guess that makes sense. To fix it, we'd either need to make a rule about when debug categories should be registered (and fix it everywhere), or else make that mode of gst-inspect create an instance of each type so that the class_init function is called. The second option seems easier, and is what gst-inspect -a does anyway.
Created attachment 325159 [details] [review] debug: Instantiate GType when dumping debug categories. A lot of debug categories are declared in element class_init functions, which don't get run until the element is first created (not just registered in the plugin load function). This means that --gst-debug-help doesn't print out a lot of categories. Creating an instance of each element from the element factory makes them visible, at some extra cost - 2-3 times longer, which can be a full second or two of extra waiting. Yikes!
Apparently I didn't actually push this - updating to 1.8.2